Added a bunch more test for lang and net of commons, addressing #8.